# sigq

./: .gitignore  .yo-rc.json  README.md  SCRAPER_GUIA.md  SCRAPER_QUALIDADE_GUIA.md  package-lock.json  package.json  relatorio_mobuss_qualidade.json  relatorio_mobuss_qualidade.xlsx  requirements_scraper.txt  scraper_com_retry.py  scraper_debug.py  scraper_mobuss_direto.py  scraper_mobuss_final.py  scraper_mobuss_melhorado.py  scraper_mobuss_qualidade.py  scraper_mobuss_qualidade_v2.py  scraper_mobuss_qualidade_v3.py
.claude/: settings.local.json
debug/: AppManifest.xml  ClientSideAssets.xml  ClientSideAssets.xml.config.xml  feature_122eea65-3a8b-48c4-94b0-d3037acb25fa.xml  feature_122eea65-3a8b-48c4-94b0-d3037acb25fa.xml.config.xml
debug/122eea65-3a8b-48c4-94b0-d3037acb25fa/: WebPart_c8e4f2a1-3b7d-4e9f-a5c2-1d8e6f3b9a4c.xml
debug/ClientSideAssets/: aprovacoes-sc-web-part_380adfc04b893a98d5a5.js
debug/_rels/: AppManifest.xml.rels  ClientSideAssets.xml.rels  feature_122eea65-3a8b-48c4-94b0-d3037acb25fa.xml.rels
sigq/: .env.example  .gitignore  ENTRA_ID_SETUP.md  GETTING_STARTED.md  Makefile  PHASE1_ADJUSTMENTS.md  PHASE1_RESULTS.md  PHASE2_PLAN.md  PRODUCTION_READY.md  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.yml  extract-halsten-v2.js  extract-halsten.js  railway.json  railway.toml  relatorio_mobuss.json  relatorio_mobuss.xlsx  scraper_mobuss.py
sigq/.claude/: settings.local.json
sigq/backend/: .coverage  .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
sigq/backend/app/: __init__.py  main.py
sigq/backend/app/core/: __init__.py  auth.py  config.py  database.py  exceptions.py  logging.py  migrations.py  storage.py
sigq/backend/app/integrations/: prevision.py  sienge.py
sigq/backend/app/models/: __init__.py  bloco.py  empreendimento.py  evidencia.py  servico.py
sigq/backend/app/routers/: __init__.py  auth.py  empreendimentos.py  evidencias.py
sigq/backend/app/schemas/: __init__.py  empreendimento.py  evidencia.py
sigq/backend/app/services/: __init__.py  empreendimento.py  storage.py
sigq/backend/migrations/: env.py
sigq/backend/migrations/versions/: e94af60a00b5_create_initial_tables.py
sigq/backend/tests/: test_empreendimentos.py  test_health.py
sigq/frontend/: .dockerignore  .env.example  COMPARATIVO_HALSTEN.md  CONVERSA_CLAUDE.md  Dockerfile  REVISAO_COMPLETA.md  capacitor.config.ts  (+5 more)
templatesPadroes/: GUIA-ADMIN(3).md  Halsten Template · standalone.html  INTEGRACAO(3).md
(+74 files in other folders)
